--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -1,6 +1,6 @@
 ---
-meta_title: Web Design and Development | Kyle Langford
-meta_description: My name is Kyle Langford, and this is my Web Design and Development portfolio.
+meta_title: Kyle Langford | Personal Site
+meta_description: My name is Kyle Langford, and this is my Web Design and Development website.
 ---
 
 {{> header}}
@@ -36,7 +36,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
     </div>
     <figure class="image">
       <img
-        src="assets/img/svg/laptop.svg"
+        src="assets/img/svg/desk.svg"
         class="icon-image position-bottom-right"
       />
     </figure>
@@ -206,11 +206,5 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         </li>
       </ul>
     </div>
-    <figure class="image">
-      <img
-        src="assets/img/svg/sunglasses.svg"
-        class="icon-image position-bottom-right"
-      />
-    </figure>
   </div>
 </section>
