--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -2,7 +2,7 @@
 <section class="mast-head">
 	<div class="position-top-left">
 		<a aria-label="return to homepage" class="button--previous" href="/">
-			[<span>KL:<span>.../public_html</span></span
+			[<span>KL:<span>.../home</span></span
 			>]$
 		</a>
 	</div>
