adding next/prev projects card component

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -14,18 +14,6 @@ $gray: #d9d9d9 !default;
 $medium-gray: #cacaca !default;
 $dark-gray: #aaaaaa !default;
 
-// Default Mobile Breakpoints
-// $tiny-screen: rem(360) !default;
-// $small-screen: rem(479) !default;
-// $small-plus-screen: rem(599) !default;
-// $medium-screen: rem(640) !default;
-// $medium-plus-screen: rem(768) !default;
-// $large-screen: rem(960) !default;
-// $large-plus-screen: rem(1080) !default;
-// $full-screen: rem(1200) !default;
-// $jumbo-screen: rem(1440) !default;
-// $site-max: rem(1536) !default;
-
 $scrap-green: #40a880;
 $cyber-green: #52dfb4;
 $twilight: #273269;
@@ -40,6 +28,11 @@ $shark-skin: #8aa8b8;
 $pink: #f27181;
 
 $paw: #f37021;
+$elev8d: #f1bf9c;
+$hle: #028bcc;
+$brm: #184082;
+$drizly: #e12c2c;
+$cpl: #c21f2f;
 
 // Secondary Colors
 $light-yellow: #fffbed !default;
