--- a/src/scss/document/_layout.scss
+++ b/src/scss/document/_layout.scss
@@ -44,9 +44,13 @@ $page-margin: 20px; // grid(5)
     width: 100%;
   }
 
-  &.row--collapse {
+  &.is--collapsed {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  &.is--full-width {
+    max-width: 100%;
   }
 }
 
