--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -39,14 +39,11 @@
 /* Components */
 @import 'components/article';
 @import 'components/buttons';
-@import 'components/footer';
-@import 'components/header';
-@import 'components/hamburger';
+@import 'components/card';
 @import 'components/links';
 @import 'components/dividers';
 @import 'components/lists';
 @import 'components/media';
-@import 'components/menus';
 
 /* Animation */
 @import 'animations/animate';
