--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -16,7 +16,7 @@ back_text: cd ..
 
     <div class="column two-thirds">
       <h1 class="page__title">Po<span class="kern-1">rtf</span>olio</h1>
-      <p class="description">
+      <p class="description animate fade-in">
         A curated collection of work examples.
       </p>
     </div>
@@ -26,14 +26,9 @@ back_text: cd ..
 <main class="container">
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
-      <h3 class="list-title animate fade-in">Best Stuff</h3>
+      <h3 class="list-title">Projects</h3>
 
-      {{> project-list }}
-
-      <div class="line-behind-text purple">
-        <!-- Credits: Copyright -->
-        <h2 class="last-edit">THANK YOU</h2>
-      </div>
+      {{> projects-all }}
     </div>
   </div>
 </main>
