--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -11,6 +11,15 @@ team:
     title: Project Manager
   - name: Kyle Langford
     title: Designer, Drupal Developer
+related:
+  - title: Princeton Alumni Magazine
+    description: Design, Drupal Development
+    href: /work/paw
+    abbv: paw
+  - title: Cambridge Public Library
+    description: Enviromental Signage and Wayfinding.
+    href: /work/cpl
+    abbv: cpl
 ---
 
 {{> intro}}
@@ -124,11 +133,7 @@ team:
 </main>
 
 <section class="container">
-  <div class="row flex flex--justify pad-default">
-    <div class="column two-thirds">
-      <h3 class="list-title animate fade-in">Best Stuff</h3>
-
-      {{> project-list}}
-    </div>
+  <div class="row flex is--collapsed is--full-width">
+    {{> projects-two}}
   </div>
 </section>
