--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -2,7 +2,7 @@
 meta_title: 'Cambridge Public Library wayfinding and signage | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford for the Cambridge Public Library wayfinding and signage project, work done at Wojciechowski Design.'
 title: Cambridge Public Library
-description: Wayfinding and Signage
+description: Wayfinding and Signage Design
 attribution: Work done at Wojciechowski Design
 last-edit: 10.31.19
 back-url: /work/all
@@ -11,6 +11,15 @@ team:
     title: Principal
   - name: Kyle Langford
     title: Designer
+related:
+  - title: Bally Ribbon Mills
+    description: Branding, Design, Drupal Development
+    href: /work/brm
+    abbv: brm
+  - title: Drizly
+    description: Design, AngularJS Development
+    href: /work/drizly
+    abbv: drizly
 ---
 
 {{> intro}}
@@ -213,13 +222,8 @@ team:
     </div>
   </div>
 </main>
-
 <section class="container">
-  <div class="row flex flex--justify pad-default">
-    <div class="column two-thirds">
-      <h3 class="list-title animate fade-in">Best Stuff</h3>
-
-      {{> project-list}}
-    </div>
+  <div class="row flex is--collapsed is--full-width">
+    {{> projects-two}}
   </div>
 </section>
