--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -3,7 +3,7 @@ meta_title: 'Elev8d Fitness Angular Video Component and Playlist | Kyle Langford
 meta_description: 'Portfolio example by Kyle Langford for Elev8d Fitness Angular Video Component and Playlist project, work done at Brunello, Inc. '
 title: Elev8d Fitness
 attribution: Work done at Brunello, Inc.
-description: Angular Video Component and Playlist
+description: Interaction Design and Angular Development
 last-edit: 10.31.19
 back-url: /work/all
 team:
@@ -12,9 +12,18 @@ team:
   - name: Jason Fournier
     title: Designer
   - name: Kyle Langford
-    title: Designer, Front-End Developer
+    title: Designer, Frontend Developer
   - name: Christian Gonzalez
     title: Developer
+related:
+  - title: Drizly
+    description: Design, AngularJS Development
+    href: /work/drizly
+    abbv: drizly
+  - title: Healthy Living Engine
+    description: Design, Drupal Development
+    href: /work/hle
+    abbv: hle
 ---
 
 {{> intro}}
@@ -83,13 +92,8 @@ team:
     </div>
   </div>
 </main>
-
 <section class="container">
-  <div class="row flex flex--justify pad-default">
-    <div class="column two-thirds">
-      <h3 class="list-title animate fade-in">Best Stuff</h3>
-
-      {{> project-list}}
-    </div>
+  <div class="row flex is--collapsed is--full-width">
+    {{> projects-two}}
   </div>
 </section>
