--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -12,9 +12,18 @@ team:
   - name: Jason Fournier
     title: Designer
   - name: Kyle Langford
-    title: Designer, Front-End Developer
+    title: Designer, Frontend Developer
   - name: Mike Calebrese
     title: Drupal Developer
+related:
+  - title: Elev8d Fitness
+    description: Experience Design, Angular Development.
+    href: /work/fitnessapp
+    abbv: elev8d
+  - title: Princeton Alumni Magazine
+    description: Design, Drupal Development
+    href: /work/paw
+    abbv: paw
 ---
 
 {{> intro}}
@@ -121,13 +130,8 @@ team:
     </div>
   </div>
 </main>
-
 <section class="container">
-  <div class="row flex flex--justify pad-default">
-    <div class="column two-thirds">
-      <h3 class="list-title animate fade-in">Best Stuff</h3>
-
-      {{> project-list}}
-    </div>
+  <div class="row flex is--collapsed is--full-width">
+    {{> projects-two}}
   </div>
 </section>
