--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -2,7 +2,7 @@
 meta_title: 'PAW Design and Drupal Development | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford on Princeton Alumni Weekly Magazine site design and development while at Brunello, inc'
 title: PAW
-description: Site Design and Drupal Development
+description: Information Architecture and Frontend Development
 attribution: Work done at Brunello, Inc.
 last-edit: 10.31.19
 back-url: /work/all
@@ -12,9 +12,18 @@ team:
   - name: Jason Fournier
     title: Designer
   - name: Kyle Langford
-    title: Designer, Front-End Developer
+    title: Designer, Frontend Developer
   - name: Mike Calebrese
     title: Drupal Developer
+related:
+  - title: Healthy Living Engine
+    description: Design, Drupal Development
+    href: /work/hle
+    abbv: hle
+  - title: Bally Ribbon Mills
+    description: Branding, Design, Drupal Development
+    href: /work/brm
+    abbv: brm
 ---
 
 {{> intro}}
@@ -191,13 +200,8 @@ team:
     </div>
   </div>
 </main>
-
 <section class="container">
-  <div class="row flex flex--justify pad-default">
-    <div class="column two-thirds">
-      <h3 class="list-title animate fade-in">Best Stuff</h3>
-
-      {{> project-list}}
-    </div>
+  <div class="row flex is--collapsed is--full-width">
+    {{> projects-two}}
   </div>
 </section>
