--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -30,6 +30,7 @@
 /* Carousel Styling */
 .stack {
   background: #fff;
+  border: 1px solid #eee;
   box-shadow:
     /* The top layer shadow */ 0 1px 1px rgba(0, 0, 0, 0.15),
     /* The second layer */ 0 10px 0 -5px #eee,
@@ -44,6 +45,7 @@
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
   padding: 8px;
+  border: 1px solid #eee;
   // width: 100%;
 }
 
