changing html background color

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -400,3 +400,6 @@ ul.pretty {
   position: relative; /* If you want text inside of it */
 }
 
+// .blend--multiply {
+//   mix-blend-mode: multiply;
+// }
