--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: $white;
-  opacity: 0;
+  // opacity: 0;
 
   // article {
   //   transform: translateY(35vh);
@@ -12,8 +12,8 @@ body {
 
   &.tween {
     // on load
-    opacity: 1;
-    transition: all 0.7s ease-in;
+    // opacity: 1;
+    // transition: all 0.7s ease-in;
 
     // article {
     //   transition: all 0.7s ease-in;
@@ -403,3 +403,71 @@ ul.pretty {
 // .blend--multiply {
 //   mix-blend-mode: multiply;
 // }
+
+// Media Content
+.specimen,
+.media {
+  margin-bottom: g(6);
+  text-align: center;
+}
+
+.stretch {
+  @include media($md-breakpoint) {
+    margin-left: -10vw;
+    margin-right: -10vw;
+  }
+}
+
+/* Carousel Styling */
+.stack {
+  background: #fff;
+  border: 1px solid #eee;
+  box-shadow:
+    /* The top layer shadow */ 0 1px 1px rgba(0, 0, 0, 0.15),
+    /* The second layer */ 0 10px 0 -5px #eee,
+    /* The second layer shadow */ 0 10px 1px -4px rgba(0, 0, 0, 0.15),
+    /* The third layer */ 0 20px 0 -10px #eee,
+    /* The third layer shadow */ 0 20px 1px -9px rgba(0, 0, 0, 0.15);
+  padding: g(2);
+}
+
+/* Image Styling */
+.paper {
+  background: #fff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  padding: 8px;
+  border: 1px solid #eee;
+  // width: 100%;
+}
+
+.fake-browser-ui {
+  padding: 20px 0 0;
+  border-radius: 3px;
+  background: #ddd;
+  display: inline-block;
+  position: relative;
+  line-height: 0;
+
+  .scroll-box {
+    overflow: scroll;
+    height: 500px;
+  }
+}
+
+.fake-browser-ui .frame {
+  display: block;
+  height: 15px;
+  position: absolute;
+  top: 5px;
+  left: 1px;
+}
+
+.fake-browser-ui span {
+  height: 8px;
+  width: 8px;
+  border-radius: 8px;
+  background-color: #eee;
+  border: 1px solid #dadada;
+  float: left;
+  margin: 0 0 0 4px;
+}
