updating front page - portfolio not done

--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -11,10 +11,9 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       <div class="intro-message">
         <h1 class="page__title">Kyle Langford</h1>
         <h2 class="page__sub-title">
-          &nbsp;Currently <span class="icon-at-sign"></span>Brunello
-          <span class="icon-coffee"></span> working on Drupal websites
-          <span class="icon-droplet"></span> web design projects and frontend
-          dev <span class="icon-zap"></span> located in Boston, MA<span
+          &nbsp;Working <span class="icon-at-sign"></span>Brunello
+          <span class="icon-coffee"></span> Frontend Development
+          <span class="icon-droplet"></span> Life is better when you make things.<span class="icon-zap"></span> located near Boston, MA<span
             class="icon-home"
           ></span>
         </h2>
@@ -27,11 +26,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <div class="row flex flex-align--center fill-height pad-default">
     <div class="column two-thirds animate fade-in">
       <p class="text--large">
-        My name is Kyle Langford I have 10 years of professional experience and
-        entrepreneurship in creating digital experiences. I focus on designing
-        easy to use interfaces and writing clean human-readable code. I am
-        passionate about learning new skills and refining my process. I have a
-        positive attitude and enjoy bringing ideas to life.
+        My name is Kyle Langford I have over 10 years of professional experience designing and developing online websites. I focus on creating easy to use interfaces and writing clean human-readable code. I am passionate about learning new skills and developing my process. I have a positive attitude and enjoy bringing ideas to life.
       </p>
     </div>
     <figure class="image">
@@ -47,7 +42,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <!-- User Interface Design  -->
   <header class="row pad-default">
     <div class="column">
-      <div class="text--display"><strong>Design</strong></div>
+      <div class="text--display"><strong>Digital Experience</strong></div>
       <p>Modern. Simple. Human.</p>
     </div>
   </header>
@@ -56,31 +51,29 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Interface Design</p>
       <ul class="pretty">
-        <li>Information Architecture</li>
-        <li>Design Systems</li>
+        <li>Mobile First</li>
         <li>Responsive Web Design</li>
-        <li>Page Layout</li>
+        <li>Web Forms</li>
+        <li>SVG Animation</li>
+        <li>Data Visualization</li>
       </ul>
     </div>
     <div class="column one-fourth animate fade-in">
       <!-- Capabilities  -->
-      <p class="list-title">Experience Design</p>
+      <p class="list-title">User Experience</p>
       <ul class="pretty">
-        <li>Accessibility</li>
-        <li>Usability</li>
-        <li>Product Design</li>
+        <li>Wireframing</li>
+        <li>User Heuristics</li>
+        <li>WAGC2.1 Accessibility</li>
       </ul>
     </div>
     <!-- Design Tools -->
     <div class="column one-fourth animate fade-in">
-      <p class="list-title">Design Tools</p>
+      <p class="list-title">Process</p>
       <ul class="pretty">
-        <li>Adobe Photoshop</li>
-        <li>Adobe Illustrator</li>
-        <li>Balsamiq</li>
-        <li>Browser</li>
-        <li>Invision App</li>
-        <li>Sketch</li>
+        <li>Information Architecture</li>
+        <li>Content Strategy</li>
+        <li>Design Systems</li>
       </ul>
     </div>
   </div>
@@ -91,7 +84,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <header class="row flex--inline  pad-default">
     <div class="column">
       <div class="text--display">
-        <strong>Dev<span class="hide--for-mobile">elopment</span></strong>
+        <strong>Frontend Dev<span class="hide--for-mobile">elopment</span></strong>
       </div>
       <p>Plan. Implement. Iterate.</p>
     </div>
@@ -100,33 +93,36 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <div class="row flex  pad-default">
     <!-- Capabilities -->
     <div class="column one-fourth animate fade-in">
-      <p class="list-title">Capabilities</p>
+      <p class="list-title">Focus</p>
       <ul class="pretty">
-        <li>CMS Theming</li>
-        <li>Frontend Development</li>
-        <li>Prototyping</li>
-        <li>Website Development</li>
+        <li>Web Development</li>
+        <li>Content Management<li>
+        <li>Theming</li>
+        <li>Estimating</li>
       </ul>
     </div>
     <!-- Core -->
     <div class="column one-fourth animate fade-in">
-      <p class="list-title">Core</p>
+      <p class="list-title">Stack</p>
       <ul class="pretty">
-        <li>HTML / CSS</li>
-        <li>JavaScript</li>
-        <li>Gulp.js / NPM</li>
-        <li>Git</li>
-        <li>PHP</li>
+        <li>Javascript</li>
+        <li>HTML and CSS</li>
+        <li>PHP and MYSQL</li>
+        <li>Git: Source Control</li>
+        <li>Node / NPM</li>
+        <li>Gulp.js</li>
       </ul>
     </div>
     <!-- Technologies -->
     <div class="column one-fourth animate fade-in">
-      <p class="list-title">Technologies</p>
+      <p class="list-title">Technology</p>
       <ul class="pretty">
-        <li>AngularJS / Angular</li>
         <li>Drupal CMS</li>
-        <li>Node.js</li>
-        <li>Shopify CMS</li>
+        <li>Shopify E-Commerce</li>
+        <li>Wordpress CMS</li>
+        <li>Angular, AngularJS</li>
+        <li>ReactJS</li>
+        <li>Google Analytics</li>
         <li>Web Hosting</li>
       </ul>
     </div>
@@ -148,12 +144,17 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       <ul class="pretty">
         <li class="list__item">
           <a href="mailto:kyle@raskyl.com"
-            ><span class="icon icons-list icon-mail"></span>kyle@raskyl.com</a
+            ><span class="icon icons-list icon-mail"></span>Email</a
           >
         </li>
         <li class="list__item">
           <a href="https://github.com/kylelangford"
             ><span class="icon icons-list icon-github"></span>Github</a
+          >
+        </li>
+        <li class="list__item">
+          <a href="https://github.com/kylelangford"
+            ><span class="icon icons-list icon-github"></span>Codepen</a
           >
         </li>
         <li class="list__item">
