--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -2,8 +2,8 @@
 meta_title: 'HLE Design and Frontend Development | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford on Healthly Living Engine application design and development while at Brunello, inc'
 title: Healthly Living Engine
-description: UI Design and Frontend Development
-attribution: Work done at Brunello, Inc.
+description: Drupal Theming and Product Design
+attribution: Work done at Brunello, Inc for Linkwell Health.
 last-edit: 10.31.19
 back-url: /work/all
 team:
@@ -12,7 +12,9 @@ team:
   - name: Jason Fournier
     title: Designer
   - name: Kyle Langford
-    title: Designer, Frontend Developer
+    title: Frontend Developer
+  - name: Jed
+    title: Drupal Developer
   - name: Mike Calebrese
     title: Drupal Developer
 related:
@@ -93,6 +95,10 @@ related:
           <div class="caption">Infographic - Kyle Langford</div>
         </div>
 
+        <h5>Base Themes (Kale + Quinoa)</h5>
+
+        <h5>Custom Themes (Optum, UHC)</h5>
+
         <h5>Custom Backend Interface</h5>
 
         <div class="specimen stretch">
@@ -103,7 +109,7 @@ related:
           />
         </div>
 
-        <h5>Develop Content, Manage Content, Publish Content</h5>
+        <h5>Custom Workflows and Publishing Tools</h5>
 
         <div class="specimen stretch">
           <img
@@ -113,7 +119,7 @@ related:
           />
         </div>
 
-        <h5>Custom Reporting</h5>
+        <h5>Custom Backend Theme</h5>
 
         <div class="specimen stretch">
           <img
